# pn2v

./: .gitignore  CARE-Convallaria-1-Training.ipynb  CARE-Convallaria-2-Prediction.ipynb  Convallaria-1-CreateNoiseModel.ipynb  Convallaria-2-Training.ipynb  Convallaria-3-Prediction.ipynb  LICENSE  Mouse-1-CreateNoiseModel-.ipynb  Mouse-2-Training.ipynb  Mouse-3-Prediction.ipynb  N2V-Convallaria-1-Training.ipynb  N2V-Convallaria-2-Prediction.ipynb  README.md  predictPN2V.py  pyproject.toml  torch_pn2v.yml  trainPN2V.py
examples/: CARE-Convallaria-1-Training.ipynb  CARE-Convallaria-2-Prediction.ipynb  Convallaria-1-CreateNoiseModel.ipynb  Convallaria-2-Training.ipynb  Convallaria-3-Prediction.ipynb  Mouse-0-GetData.ipynb  Mouse-1-CreateNoiseModel.ipynb  Mouse-2-Training.ipynb  Mouse-3-Prediction.ipynb  N2V-Convallaria-1-Training.ipynb  N2V-Convallaria-2-Prediction.ipynb
examples/Convallaria/Care/: 1_CareTraining.ipynb
examples/Convallaria/N2V/: 1_N2VTraining.ipynb  2_N2VPrediction.ipynb
examples/Convallaria/PN2V/: 1a_CreateNoiseModel_GMM.ipynb  1b_CreateNoiseModel_Histogram.ipynb  2_ProbabilisticNoise2VoidTraining.ipynb  3_ProbabilisticNoise2VoidPrediction.ipynb
examples/MouseActin/N2V/: 1_N2VTraining.ipynb  2_N2VPrediction.ipynb
examples/MouseActin/PN2V/: 1a_CreateNoiseModel_GMM.ipynb  1b_CreateNoiseModel_Histogram.ipynb  2_ProbabilisticNoise2VoidTraining.ipynb  (+1 more)
pn2v/: gaussianMixtureNoiseModel.py  histNoiseModel.py  prediction.py  training.py  utils.py
scripts/: predictPN2V.py  trainPN2V.py
src/pn2v/: __init__.py
src/pn2v/core/: utils.py  (+4 more)
unet/: model.py
(+7 files in other folders)
