# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/


# https://peps.python.org/pep-0621/
[project]
name = "pn2v"
version = "0.1.0"
description = "Fully Unsupervised Probabilistic Noise2Void"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Alexander Krull" },
    { name = "Tomas Vicar" },
    { name = "Mangal Prakash" },
    { name = "Manan Lalit" },
    { name = "Florian Jug" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # "License :: OSI Approved :: BSD License",
    # "Typing :: Typed",
]
# add your package dependencies here
dependencies = ["tifffile", "numpy<1.24.0", "matplotlib", "scipy"]


[project.urls]
homepage = "https://github.com/juglab/pn2v.git"
repository = "https://github.com/juglab/pn2v.git"
